# Matomail

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  pyproject.toml
src/matomail/: __init__.py  analyzer.py  app.py  calendar_client.py  config.py  database.py  digest.py  gmail_client.py  interaction.py  llm_client.py  models.py  report.py  web.py  workflow.py
src/matomail/prompts/: email_analysis.md  reply_draft.md
src/matomail/templates/: report.html.j2  web_compose.html.j2  web_generation_instruction_edit.html.j2  web_generation_instructions.html.j2  web_home.html.j2  web_instruction_form.html.j2  web_instructions.html.j2  web_reply_form.html.j2  web_reply_schedule.html.j2  web_rule_edit.html.j2  web_rule_form.html.j2  web_rules.html.j2  web_run.html.j2  web_singletons.html.j2  web_unhandled.html.j2
tests/: test_analyzer.py  test_config.py  test_database.py  test_digest.py  test_gmail_client.py  test_report.py  test_web.py  test_workflow.py
